feat: 集成 UltiPanel WebSocket 功能并重构命令执行器
1. 新增 UltiPanel WebSocket 集成：
   - 添加 UltiPanelWebSocketClient 用于与后端通信
   - 实现 ServerMonitorManager (服务器监控)
   - 实现 CommandExecutionManager (远程命令执行)
   - 实现 FileOperationManager (远程文件管理)
   - 实现 LogStreamManager (日志流传输)
   - 实现 PlayerEventManager (玩家事件监听)
   - 添加 LogTransmissionCommands 用于控制日志传输

2. 核心重构与优化：
   - 重命名 AbstractCommendExecutor 为 AbstractCommandExecutor (修复拼写错误)，保留旧类为 @Deprecated 以保持兼容性
   - 增强 SimpleContainer IoC 容器，支持 @PostConstruct 和 @PreDestroy 生命周期注解
   - 优化 ComponentScanner 组件扫描逻辑
   - 改进 PluginInstallCommands 和 UltiToolsCommands

3. 工具类增强：
   - 更新 HttpDownloadUtils, PluginInstallUtils, VersionUtils 等工具类
   - 优化 ConfigEditorUtils 和 AnnotationUtils

4. 测试与文档：
   - 添加大量单元测试 (JUnit 5 + Mockito)，覆盖 Context, Utils, Managers 等模块
   - 添加 .github/copilot-instructions.md 开发指南
   - 更新 config.yml 和 env.yml 配置文件