@@ -69,47 +69,75 @@ public abstract class UltiToolsPlugin implements IPlugin, Localized, Configurabl
      * UltiToolsPlugin的构造函数。仅用于模块开发。
      */
     protected UltiToolsPlugin() {
-        InputStream inputStream = null;
-        try {
-            inputStream = getInputStream();
-        }catch (IOException e){
-            getLogger().error(e);
-        }
-        BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
-        YamlConfiguration pluginConfig = YamlConfiguration.loadConfiguration(reader);
-        version = pluginConfig.getString("version");
-        pluginName = pluginConfig.getString("name");
+        YamlConfiguration pluginConfig = loadPluginConfiguration();
+        
+        version = pluginConfig.getString("version", "unknown");
+        pluginName = pluginConfig.getString("name", "unknown");
         authors = pluginConfig.getStringList("authors");
         loadAfter = pluginConfig.getStringList("loadAfter");
-        minUltiToolsVersion = pluginConfig.getInt("api-version");
-        mainClass = pluginConfig.getString("main");
-        try{
-            inputStream.close();
-            reader.close();
-        } catch (IOException e) {
-            getLogger().error(e);
-        }
+        minUltiToolsVersion = pluginConfig.getInt("api-version", 0);
+        mainClass = pluginConfig.getString("main", "unknown");
 
         resourceFolderPath = UltiTools.getInstance().getDataFolder().getAbsolutePath() + File.separator + "pluginConfig" + File.separator + this.getPluginName();
-        File file = new File(resourceFolderPath + File.separator + "lang" + File.separator + this.getLanguageCode() + ".json");
-        if (!file.exists()) {
-            String lanPath = "lang" + File.separator + this.getLanguageCode() + ".json";
-            InputStream in = getResource(lanPath);
-            if (in != null) {
-                String result = new BufferedReader(new InputStreamReader(in))
-                        .lines().collect(Collectors.joining(""));
-                language = new Language(result);
-            } else {
-                language = new Language("{}");
-            }
-        } else {
-            language = new Language(file);
-        }
+        language = initializeLanguage();
         saveResources();
         try{
             initConfig();
         } catch (IOException e) {
             getLogger().error(e);
+        }
+    }
+
+    /**
+     * Initializes the language object
+     * @return Language object
+     */
+    private Language initializeLanguage() {
+        return createLanguageFromPath(resourceFolderPath);
+    }
+
+    /**
+     * Creates a Language object from the given resource folder path
+     * @param folderPath the resource folder path
+     * @return Language object
+     */
+    private Language createLanguageFromPath(String folderPath) {
+        File file = new File(folderPath + File.separator + "lang" + File.separator + this.getLanguageCode() + ".json");
+        if (!file.exists()) {
+            String lanPath = "lang" + File.separator + this.getLanguageCode() + ".json";
+            InputStream in = getResource(lanPath);
+            if (in != null) {
+                try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(in))) {
+                    String result = bufferedReader.lines().collect(Collectors.joining(""));
+                    return new Language(result);
+                } catch (IOException e) {
+                    getLogger().error("Failed to read language file", e);
+                    return new Language("{}");
+                }
+            } else {
+                return new Language("{}");
+            }
+        } else {
+            return new Language(file);
+        }
+    }
+
+    /**
+     * Loads the plugin configuration from plugin.yml
+     * @return YamlConfiguration object with default values if loading fails
+     */
+    private YamlConfiguration loadPluginConfiguration() {
+        try (InputStream inputStream = getInputStream()) {
+            if (inputStream == null) {
+                getLogger().error("Cannot find plugin.yml in the plugin jar");
+                return new YamlConfiguration();
+            }
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream))) {
+                return YamlConfiguration.loadConfiguration(reader);
+            }
+        } catch (IOException e) {
+            getLogger().error("Failed to load plugin configuration", e);
+            return new YamlConfiguration();
         }
     }
 
@@ -135,20 +163,7 @@ public abstract class UltiToolsPlugin implements IPlugin, Localized, Configurabl
         this.minUltiToolsVersion = minUltiToolsVersion;
         this.mainClass = mainClass;
         resourceFolderPath = UltiTools.getInstance().getDataFolder().getAbsolutePath() + "/pluginConfig/" + this.getPluginName();
-        File file = new File(resourceFolderPath + "/lang/" + this.getLanguageCode() + ".json");
-        if (!file.exists()) {
-            String lanPath = "lang/" + this.getLanguageCode() + ".json";
-            InputStream in = getResource(lanPath);
-            if (in != null) {
-                String result = new BufferedReader(new InputStreamReader(in))
-                        .lines().collect(Collectors.joining(""));
-                language = new Language(result);
-            } else {
-                language = new Language("{}");
-            }
-        } else {
-            language = new Language(file);
-        }
+        language = createLanguageFromPath(resourceFolderPath);
         saveResources();
         initConfig();
     }
@@ -174,20 +189,7 @@ public abstract class UltiToolsPlugin implements IPlugin, Localized, Configurabl
         this.minUltiToolsVersion = minUltiToolsVersion;
         this.mainClass = mainClass;
         this.resourceFolderPath = resourceFolderPath;
-        File file = new File(resourceFolderPath + File.separator + "lang" + File.separator + this.getLanguageCode() + ".json");
-        if (!file.exists()) {
-            String lanPath = "lang" + File.separator + this.getLanguageCode() + ".json";
-            InputStream in = getResource(lanPath);
-            if (in != null) {
-                String result = new BufferedReader(new InputStreamReader(in))
-                        .lines().collect(Collectors.joining(""));
-                language = new Language(result);
-            } else {
-                language = new Language("{}");
-            }
-        } else {
-            language = new Language(file);
-        }
+        language = createLanguageFromPath(resourceFolderPath);
         saveResources();
         try {
             initConfig();
@@ -256,9 +258,13 @@ public abstract class UltiToolsPlugin implements IPlugin, Localized, Configurabl
         CodeSource src = this.getClass().getProtectionDomain().getCodeSource();
         URL jar = src.getLocation();
         String path = jar.getPath().startsWith("/") ? jar.getPath() : jar.getPath().substring(1);
-        URL url = new URL("jar:file:" + path + "!/plugin.yml");
-        JarURLConnection jarConnection = (JarURLConnection) url.openConnection();
-        return jarConnection.getInputStream();
+        try {
+            URL url = new java.net.URI("jar:file:" + path + "!/plugin.yml").toURL();
+            JarURLConnection jarConnection = (JarURLConnection) url.openConnection();
+            return jarConnection.getInputStream();
+        } catch (java.net.URISyntaxException e) {
+            throw new IOException("Invalid URL format", e);
+        }
     }
 
     protected final String getConfigFolder() {
@@ -289,37 +295,38 @@ public abstract class UltiToolsPlugin implements IPlugin, Localized, Configurabl
     private void saveResources() {
         CodeSource src = this.getClass().getProtectionDomain().getCodeSource();
         URL jar = src.getLocation();
-        JarFile jarFile = new JarFile(
+        try (JarFile jarFile = new JarFile(
                 jar.getPath().startsWith("/") ? jar.getPath() : jar.getPath().substring(1)
-        );
-        Enumeration<JarEntry> entries = jarFile.entries();
-        while (entries.hasMoreElements()) {
-            JarEntry jarEntry = entries.nextElement();
-            String fileName = jarEntry.getName();
-            if ((!fileName.startsWith("res") && !fileName.startsWith("lang")
-                    && !fileName.startsWith("config")) || !fileName.contains(".")) {
-                continue;
-            }
-            InputStream inputStream = jarFile.getInputStream(jarEntry);
-            if (inputStream == null) {
-                throw new IllegalArgumentException("The embedded resource '" + fileName + "' cannot be found in " + fileName);
-            }
-            File outFile = new File(resourceFolderPath, fileName);
-            try {
-                if (outFile.exists()) {
+        )) {
+            Enumeration<JarEntry> entries = jarFile.entries();
+            while (entries.hasMoreElements()) {
+                JarEntry jarEntry = entries.nextElement();
+                String fileName = jarEntry.getName();
+                if ((!fileName.startsWith("res") && !fileName.startsWith("lang")
+                        && !fileName.startsWith("config")) || !fileName.contains(".")) {
                     continue;
                 }
-                FileUtil.touch(outFile);
-                OutputStream out = Files.newOutputStream(outFile.toPath());
-                byte[] buf = new byte[1024];
-                int len;
-                while ((len = inputStream.read(buf)) > 0) {
-                    out.write(buf, 0, len);
+                try (InputStream inputStream = jarFile.getInputStream(jarEntry)) {
+                    if (inputStream == null) {
+                        throw new IllegalArgumentException("The embedded resource '" + fileName + "' cannot be found in " + fileName);
+                    }
+                    File outFile = new File(resourceFolderPath, fileName);
+                    try {
+                        if (outFile.exists()) {
+                            continue;
+                        }
+                        FileUtil.touch(outFile);
+                        try (OutputStream out = Files.newOutputStream(outFile.toPath())) {
+                            byte[] buf = new byte[1024];
+                            int len;
+                            while ((len = inputStream.read(buf)) > 0) {
+                                out.write(buf, 0, len);
+                            }
+                        }
+                    } catch (IOException ex) {
+                        UltiTools.getInstance().getLogger().log(Level.WARNING, "Could not save " + outFile.getName() + " to " + outFile);
+                    }
                 }
-                out.close();
-                inputStream.close();
-            } catch (IOException ex) {
-                UltiTools.getInstance().getLogger().log(Level.WARNING, "Could not save " + outFile.getName() + " to " + outFile);
             }
         }
     }
@@ -369,7 +376,7 @@ public abstract class UltiToolsPlugin implements IPlugin, Localized, Configurabl
      * @return the localized string <br> 本地化后的字符串
      */
     public String i18n(String str) {
-        return this.i18n(UltiTools.getInstance().getConfig().getString("language"), str);
+        return this.getLanguage().getLocalizedText(str);
     }
 
     @Override
@@ -382,6 +389,9 @@ public abstract class UltiToolsPlugin implements IPlugin, Localized, Configurabl
      * @return whether the plugin is newer than the given plugin <br> 插件是否比给定的插件新
      */
     public boolean isNewerVersionThan(UltiToolsPlugin plugin) {
+        if (plugin == null || plugin.getVersion() == null || this.getVersion() == null) {
+            return false;
+        }
         return VersionComparator.INSTANCE.compare(this.getVersion(), plugin.getVersion()) > 0;
     }
 
